# reverse_proxy

./: .$reverse_proxy.drawio.bkp  LICENSE  README.md  reverse_proxy.drawio
client/: CMakeLists.txt  buffer.h  client.cpp  client.h  config.cpp  connections_manager.cpp  connections_manager.h  guid.cpp  guid.h  main.cpp  network_init.cpp  network_init.h  socket_utils.cpp  socket_utils.h  task_manager.cpp  task_manager.h
client/exceptions/: client_exception.cpp  client_exception.h  connection_exception.cpp  connection_exception.h  error_response_exception.cpp  error_response_exception.h  guid_creation_exception.cpp  guid_creation_exception.h  invalid_connection_exception.cpp  invalid_connection_exception.h  tunnel_info_exception.cpp  tunnel_info_exception.h  winsock_exception.cpp  winsock_exception.h  winsock_nonblock_exception.cpp  winsock_nonblock_exception.h
client/packets/: client_connection_packet.cpp  client_connection_packet.h  client_disconnect_packet.cpp  client_disconnect_packet.h  communication_packet.cpp  communication_packet.h  error_response_packet.cpp  error_response_packet.h  ipacket.cpp  ipacket.h  tunnel_info_request_packet.cpp  tunnel_info_request_packet.h  tunnel_info_response_packet.cpp  tunnel_info_response_packet.h
client/tasks/: itask.cpp  itask.h  local_socket_recv_task.cpp  local_socket_recv_task.h
server/: CMakeLists.txt  buffer.h  config.cpp  config.h  guid.cpp  guid.h  main.cpp  network_init.cpp  network_init.h  server.cpp  server.h  socket_manager.cpp  socket_manager.h  socket_utils.cpp  socket_utils.h  task_manager.cpp  task_manager.h  tunnel.cpp  tunnel.h  tunnel_manager.cpp  tunnel_manager.h
server/exceptions/: guid_creation_exception.cpp  guid_creation_exception.h  server_exception.cpp  server_exception.h  socket_manager_exception.cpp  socket_manager_exception.h  tunnel_exception.cpp  tunnel_exception.h  tunnel_manager_exception.cpp  tunnel_manager_exception.h  winsock_exception.cpp  winsock_exception.h  winsock_nonblock_exception.cpp  winsock_nonblock_exception.h
server/packets/: client_connection_packet.cpp  client_connection_packet.h  client_disconnect_packet.cpp  client_disconnect_packet.h  communication_packet.cpp  communication_packet.h  error_response_packet.cpp  error_response_packet.h  ipacket.cpp  ipacket.h  packet_type.h  tunnel_info_packet.cpp  tunnel_info_packet.h  tunnel_info_response_packet.cpp  tunnel_info_response_packet.h
server/tasks/: client_con_task.cpp  client_con_task.h  client_recv_task.cpp  client_recv_task.h  host_client_con_task.cpp  host_client_con_task.h  host_recv_task.cpp  host_recv_task.h  isocket_task.cpp  isocket_task.h  itask.cpp  itask.h  recv_size_packet_task.cpp  recv_size_packet_task.h  test_task.cpp  test_task.h
